# clinicaltrials-neo4j-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cypher/: demo_queries.cypher
scripts/: download_aact_manual.sh  setup_neo4j_schema.py
src/pipeline/: __init__.py  config.py  cypher.py  extract.py  ingest.py  load.py  run.py  transform.py
src/utils/: hashing.py  logging.py
tests/: __init__.py  test_extraction.py  test_normalization.py
